archive page abstracts overflowing: fixed

--- a/app/static/css/archive_extra.css
+++ b/app/static/css/archive_extra.css
@@ -151,7 +151,7 @@ browser for some reason.. */
 }
 /* Episode boxes on the homepage */
 .homepage_box_episode{
-  height: 400px;
+  height: 420px;
   text-align: center;
   color: white;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8));
@@ -170,7 +170,7 @@ browser for some reason.. */
 }
 .homepage_box_abstract{
   color: white;
-  font-size: 16px;
+  font-size: 15px;
   margin: 6.5% 18% 0px 18%;
   text-align: center;
   line-height: 23px;
